# eddie

./: Cargo.toml  README.md
src/: main.rs
src/config_reader/: config_aggregator.rs  config_structs.rs  mod.rs  toml_parser.rs
src/tui/: drawer.rs
src/tui/event_manager/: event_handler.rs
src/ui/: Layout.rs  drawer.rs  executor.rs  layout.rs  mod.rs  state.rs
src/ui/event_manager/: event_handler.rs
src/ui/util/: event.rs  mod.rs
test_configuration/: main.toml  tests.toml
test_configuration/work/: general.toml
