[package]
authors = ["Andrea Tupini <tupini07@gmail.com>"]
edition = "2018"
name = "eddie"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.22.1"
dirs = "3.0.1"
lazy_static = "1.4.0"
toml = "0.5.7"
tui = {version = "0.16", default-features = false, features = ['crossterm']}
walkdir = "2.3.1"

[dev-dependencies]
pretty_assertions = "0.6.1"
rand = "0.7.3"
