[package]
authors = ["Andrea Tupini <tupini07@gmail.com>"]
edition = "2018"
name = "eddie"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
cursive = {version = "0.20.0", default-features = false, features = ["crossterm-backend"]}
dirs = "4.0.0"
lazy_static = "1.4.0"
toml = "0.5.10"
tui = {version = "0.19", default-features = false, features = ['crossterm']}
walkdir = "2.3.2"

[dev-dependencies]
pretty_assertions = "1.3.0"
rand = "0.8.5"
